--- a/online-library-management-system/wwwroot/css/site.css
+++ b/online-library-management-system/wwwroot/css/site.css
@@ -20,3 +20,25 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+
+.navbar-light .navbar-nav .nav-link {
+    color: #1d509f !important;
+}
+
+.navbar-light .navbar-brand {
+    color: #1d509f;
+    font-weight: bold;
+}
+
+.min-vh-85 {
+    min-height: 85vh !important;
+}
+
+.page-align {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+}
