role base login add

--- a/online-library-management-system/Views/Shared/_Layout.cshtml
+++ b/online-library-management-system/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
             </div>
         </nav>
     </header>
-    <div class="container min-vh-85 page-align">
+    <div class="container min-vh-85">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
