admin pages create

--- a/online-library-management-system/Areas/Admin/Views/Category/Index.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Category/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Dashboard";
+    ViewData["Title"] = "Category List";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Category</h1>
+    <h1 class="display-4">Category List</h1>
 </div>
