--- a/online-library-management-system/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                             </a>
                             <ul class="dropdown-menu animated flipInX">
                                 <li class="user-body">
-                                    <a class="dropdown-item" asp-action="Logout" asp-controller="Account"><i class="ti-lock text-muted me-2"></i> Logout</a>
+                                    <a class="dropdown-item" asp-area="" asp-action="Logout" asp-controller="Account"><i class="ti-lock text-muted me-2"></i> Logout</a>
                                 </li>
                             </ul>
                         </li>
@@ -82,7 +82,7 @@
                         <!-- sidebar menu-->
                         <ul class="sidebar-menu" data-widget="tree">
                             <li>
-                                <a asp-action="Index" asp-controller="Admin">
+                                <a asp-area="Admin" asp-action="Index" asp-controller="Dashboard">
                                     <i class="icon-Layout-4-blocks"><span class="path1"></span><span class="path2"></span></i>
                                     <span>Dashboard</span>
                                 </a>
@@ -96,18 +96,18 @@
                                     </span>
                                 </a>
                                 <ul class="treeview-menu">
-                                    <li><a asp-action="New" asp-controller="Inventory"><i class="icon-Commit"><span class="path1"></span><span class="path2"></span></i>Add New Item</a></li>
-                                    <li><a asp-action="Index" asp-controller="Inventory"><i class="icon-Commit"><span class="path1"></span><span class="path2"></span></i>Manage Inventory</a></li>
+                                    <li><a asp-area="Admin" asp-action="Create" asp-controller="Inventory"><i class="icon-Commit"><span class="path1"></span><span class="path2"></span></i>Add New Item</a></li>
+                                    <li><a asp-area="Admin" asp-action="Index" asp-controller="Inventory"><i class="icon-Commit"><span class="path1"></span><span class="path2"></span></i>Manage Inventory</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a asp-area="Admin" asp-page="/Category/Index">
+                                <a asp-area="Admin" asp-action="Index" asp-controller="Category">
                                     <i class="icon-Briefcase"><span class="path1"></span><span class="path2"></span></i>
                                     <span>Category</span>
                                 </a>
                             </li>
                             <li>
-                                <a asp-action="Index" asp-controller="Contributors">
+                                <a asp-area="Admin" asp-action="Index" asp-controller="Contributor">
                                     <i class="icon-User"><span class="path1"></span><span class="path2"></span></i>
                                     <span>Contributors</span>
                                 </a>
@@ -121,18 +121,18 @@
                                     </span>
                                 </a>
                                 <ul class="treeview-menu">
-                                    <li><a asp-action="Issue" asp-controller="Lending"><i class="icon-Commit"><span class="path1"></span><span class="path2"></span></i>Issue Items</a></li>
-                                    <li><a asp-action="Return" asp-controller="Lending"><i class="icon-Commit"><span class="path1"></span><span class="path2"></span></i>Return Items</a></li>
+                                    <li><a asp-area="Admin" asp-action="Issue" asp-controller="Lending"><i class="icon-Commit"><span class="path1"></span><span class="path2"></span></i>Issue Items</a></li>
+                                    <li><a asp-area="Admin" asp-action="Return" asp-controller="Lending"><i class="icon-Commit"><span class="path1"></span><span class="path2"></span></i>Return Items</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a asp-action="Index" asp-controller="Messages">
+                                <a asp-area="Admin" asp-action="Index" asp-controller="Messages">
                                     <i class="icon-Chat"><span class="path1"></span><span class="path2"></span></i>
                                     <span>Messages</span>
                                 </a>
                             </li>
                             <li>
-                                <a asp-action="Logout" asp-controller="Account">
+                                <a asp-area="" asp-action="Logout" asp-controller="Account">
                                     <i class="icon-Lock"><span class="path1"></span><span class="path2"></span></i>
                                     <span>Logout</span>
                                 </a>
