--- a/online-library-management-system/Areas/Admin/Views/_ViewImports.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@namespace online_library_management_system.Areas.Admin.Views
+@using online_library_management_system.ViewModels
+@using online_library_management_system.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
