--- a/online-library-management-system/Areas/Admin/Views/Category/Index.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Category/Index.cshtml
@@ -17,7 +17,13 @@
 <section class="content">
     <div class="row">
         <div class="col-lg-5 col-12">
-            <partial name="_FormPartial"/>
+            <div class="box">
+                <div class="box-header with-border">
+                    <h4 class="box-title">Add New Category</h4>
+                </div>
+                <partial name="_FormPartial" />
+            </div>
+                
         </div>
         <div class="col-lg-7 col-12">
             <div class="box">
