--- a/online-library-management-system/Areas/Admin/Views/Category/_FormPartial.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Category/_FormPartial.cshtml
@@ -1,25 +1,25 @@
 ﻿@model CategoryVM
 
-<div class="box">
-    <div class="box-header with-border">
-        <h4 class="box-title">Add New Category</h4>
+@{
+    var action = Model.NewCategory.Id == 0 ? "Index" : "Edit";
+}
+
+
+<form class="form" asp-action="@action" asp-controller="Category" asp-area="Admin" method="post">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="box-body">
+        <div class="form-group">
+            <label class="form-label">Name</label>
+            <input class="form-control" asp-for="NewCategory.Name" placeholder="Name" />
+            <span asp-validation-for="NewCategory.Name" class="text-danger"></span>
+        </div>
     </div>
-    <form class="form" asp-action="Index" asp-controller="Category" asp-area="Admin" method="post">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="box-body">
-            <div class="form-group">
-                <label class="form-label">Name</label>
-                <input class="form-control" asp-for="NewCategory.Name" placeholder="Name" />
-                <span asp-validation-for="NewCategory.Name" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="box-footer text-end">
-            <button type="submit" class="btn btn-primary">
-                <i class="ti-save-alt"></i> Save
-            </button>
-            <a asp-area="Admin" asp-action="Index" asp-controller="Category" role="button" class="btn btn-warning me-1">
-                <i class="ti-trash"></i> Cancel
-            </a>
-        </div>
-    </form>
-</div>
+    <div class="box-footer text-end">
+        <button type="submit" class="btn btn-primary">
+            <i class="ti-save-alt"></i> Save
+        </button>
+        <a asp-area="Admin" asp-action="Index" asp-controller="Category" role="button" class="btn btn-warning me-1">
+            <i class="ti-trash"></i> Cancel
+        </a>
+    </div>
+</form>
