fix Authors and Artists

--- a/online-library-management-system/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -111,9 +111,9 @@
                                 </a>
                             </li>
                             <li>
-                                <a asp-area="Admin" asp-action="Index" asp-controller="Contributor">
+                                <a asp-area="Admin" asp-action="Index" asp-controller="AuthorAndArtist">
                                     <i class="icon-User"><span class="path1"></span><span class="path2"></span></i>
-                                    <span>Contributors</span>
+                                    <span>Authors/Artists</span>
                                 </a>
                             </li>
                             <li class="treeview">
@@ -187,9 +187,8 @@
                 <text>toastr.error('@TempData["ErrorMessage"]');</text>
             }
         });
-    </script>
 
-    <script>toastr.options = {
+        toastr.options = {
             "closeButton": true,
             "debug": false,
             "newestOnTop": true,
@@ -224,37 +223,10 @@
             }, 5000);
         });
 
-        function confirmDelete(id) {
-            toastr.warning('<br /><button type="button" class="btn btn-danger btn-sm" id="delete-confirm" style="margin-right: 10px;">Yes, delete it!</button><button type="button" class="btn btn-secondary btn-sm" id="delete-cancel">Cancel</button>', 'Are you sure you want to delete this item?', {
-                closeButton: false,
-                allowHtml: true,
-                onShown: function (toast) {
-                    $("#delete-confirm").click(function () {
-                        deleteCategory(id);
-                    });
-                    $("#delete-cancel").click(function () {
-                        toastr.clear(toast);
-                    });
-                }
-            });
-        }
-
-        function deleteCategory(id) {
-            $.ajax({
-                url: '@Url.Action("Delete", "Category", new { area = "Admin" })/' + id,
-                type: 'POST',
-                success: function (result) {
-                    toastr.success('Category deleted successfully!');
-                    setTimeout(function () {
-                        location.reload();
-                    }, 5000);
-                },
-                error: function (xhr, status, error) {
-                    toastr.error('Unable to delete the category. Try again!');
-                }
-            });
-        }
     </script>
+
+    <!-- Render optional Scripts section -->
+    @RenderSection("Scripts", required: false)
 
 
 </body>
