--- a/online-library-management-system/Areas/Admin/Views/Category/Index.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Category/Index.cshtml
@@ -23,7 +23,7 @@
                 </div>
                 <partial name="_FormPartial" />
             </div>
-                
+
         </div>
         <div class="col-lg-7 col-12">
             <div class="box">
@@ -63,3 +63,38 @@
     <!-- /.row -->
 </section>
 <!-- /.content -->
+
+@section Scripts {
+    <script type="text/javascript">
+        function confirmDelete(id) {
+            toastr.warning('<br /><button type="button" class="btn btn-danger btn-sm" id="delete-confirm" style="margin-right: 10px;">Yes, delete it!</button><button type="button" class="btn btn-secondary btn-sm" id="delete-cancel">Cancel</button>', 'Are you sure you want to delete this item?', {
+                closeButton: false,
+                allowHtml: true,
+                onShown: function (toast) {
+                    $("#delete-confirm").click(function () {
+                        deleteCategory(id);
+                    });
+                    $("#delete-cancel").click(function () {
+                        toastr.clear(toast);
+                    });
+                }
+            });
+        }
+
+        function deleteCategory(id) {
+            $.ajax({
+                url: '@Url.Action("Delete", "Category", new { area = "Admin" })/' + id,
+                type: 'POST',
+                success: function (result) {
+                    toastr.success('Category deleted successfully!');
+                    setTimeout(function () {
+                        location.reload();
+                    }, 3000);
+                },
+                error: function (xhr, status, error) {
+                    toastr.error('Unable to delete the category. Try again!');
+                }
+            });
+        }
+    </script>
+}
