fix item create and view

--- a/online-library-management-system/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -100,8 +100,8 @@
                                     </span>
                                 </a>
                                 <ul class="treeview-menu">
-                                    <li><a asp-area="Admin" asp-action="Create" asp-controller="Inventory"><i class="icon-Commit"><span class="path1"></span><span class="path2"></span></i>Add New Item</a></li>
-                                    <li><a asp-area="Admin" asp-action="Index" asp-controller="Inventory"><i class="icon-Commit"><span class="path1"></span><span class="path2"></span></i>Manage Inventory</a></li>
+                                    <li><a asp-area="Admin" asp-action="Create" asp-controller="Item"><i class="icon-Commit"><span class="path1"></span><span class="path2"></span></i>Add New Item</a></li>
+                                    <li><a asp-area="Admin" asp-action="Index" asp-controller="Item"><i class="icon-Commit"><span class="path1"></span><span class="path2"></span></i>Manage Items</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -167,6 +167,9 @@
     <script src="~/admin/assets/icons/feather-icons/feather.min.js"></script>
 
     <script src="~/admin/assets/vendor_components/datatable/datatables.min.js"></script>
+
+    <script src="~/admin/assets/vendor_components/Magnific-Popup-master/dist/jquery.magnific-popup.min.js"></script>
+    <script src="~/admin/assets/vendor_components/Magnific-Popup-master/dist/jquery.magnific-popup-init.js"></script>
 
     <!-- Toastr JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
